--- a/src/IronyModManager/Views/Controls/OptionsControlView.xaml
+++ b/src/IronyModManager/Views/Controls/OptionsControlView.xaml
@@ -18,7 +18,7 @@
             <Border BorderThickness="1,1,1,1" BorderBrush="{DynamicResource IronyButtonBorderBrush}">
               <TextBlock Text="{Binding GameOptions}" FontSize="14" HorizontalAlignment="Center"></TextBlock>
             </Border>
-            <Grid ColumnDefinitions="3*,3*,1*,1*" RowDefinitions="1*,1*,1*,1*,1*,1*,1*" Margin="0,5">
+            <Grid ColumnDefinitions="3*,3*,1*,1*" RowDefinitions="1*,1*,1*,1*,1*,1*,1*,1*" Margin="0,5">
               <Button Content="{Binding AutoConfigure}" Command="{Binding AutoConfigureCommand}" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4"
                       HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Button>
               <TextBlock Text="{Binding GameExecutable}" Margin="0,5,0,0" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Left" TextWrapping="Wrap"></TextBlock>
@@ -41,6 +41,8 @@
                         Grid.ColumnSpan="4" Grid.Column="0" Grid.Row="5"></CheckBox>
               <CheckBox Margin="0,5,0,0" Content="{Binding CloseAppAfterGameLaunch}" IsChecked="{Binding Game.CloseAppAfterGameLaunch}"
                         Grid.ColumnSpan="4" Grid.Column="0" Grid.Row="6"></CheckBox>
+              <CheckBox Margin="0,5,0,0" Content="{Binding IncludeVanilla}" IsChecked="{Binding Game.IncludeVanilla}"
+                        Grid.ColumnSpan="4" Grid.Column="0" Grid.Row="7"></CheckBox>
             </Grid>
           </StackPanel>
           <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="0">
